syntax = "proto3";

option java_package = "octoteam.tahiti.protocol";
option java_outer_classname = "SocketMessageProtos";

// 客户端主动向服务端请求：Request；服务端反馈：Response
// 服务端向客户端推送：Event；客户端反馈：Ack

message Message {
  enum MessageType {
    NOT_IMPLEMENTED         = 0;    // Dummy

    PING                    = 1;    // 客户端->服务端测试请求
    PONG                    = 2;    // 服务端->客户端测试请求

    USER_SIGN_IN_REQ        = 10;   // 客户端->服务端登录请求
    USER_SIGN_IN_RESP       = 11;   // 服务端->客户端登录响应

    CHAT_MESSAGE_REQ        = 20;   // 客户端->服务端消息
    CHAT_MESSAGE_RESP       = 21;   // 服务端->客户端消息反馈（投递成功，投递失败-超过配额，

    HEARTBEAT_EVENT         = 30;   // 服务端->客户端心跳
    HEARTBEAT_ACK           = 31;   // 客户端->服务端心跳

    SESSION_EXPIRED_EVENT   = 41;   // 服务端->客户端要求重新登录

    CHAT_BROADCAST_EVENT    = 50;   // 服务端->客户端广播消息
    CHAT_BROADCAST_ACK      = 51;   // 服务端->客户端广播消息反馈
  }
  MessageType type = 1;
  oneof body {
    PingPongBody              pingPong            = 2;
    UserSignInReqBody         userSignInReq       = 10;
    UserSignInRespBody        userSignInResp      = 11;
    ChatMessageReqBody        chatMessageReq      = 20;
    ChatMessageRespBody       chatMessageResp     = 21;
    HeartbeatReqBody          heartbeatReq        = 30;
    HeartbeatRespBody         heartbeatResp       = 31;
    SessionExpiredEventBody   sessionExpiredEvent = 40;
    ChatBroadcastEventBody    chatBroadcastEvent  = 50;
    ChatBroadcastAckBody      chatBroadcastAck    = 51;
  }
}

message PingPongBody {
  string payload = 1;
}

message UserSignInReqBody {
  string username = 1;
  string password = 2;
}

message UserSignInRespBody {
  enum Error {
    SUCCESS = 0;
    USERNAME_NOT_FOUND = 1;
    PASSWORD_WRONG = 2;
    OTHER = 99;
  }
  Error error = 1;
  string clientId = 2;
  string sessionId = 3;
}

message ChatMessageReqBody {
  string id = 1;
  bytes payload = 2;
  uint64 timestamp = 3;
}

message ChatMessageRespBody {
  enum Error {
    SUCCESS = 0;
    LIMIT_EXCEEDED = 1;
    OTHER = 99;
  }
  Error error = 1;
}

message HeartbeatReqBody {
  string id = 1;
}

message HeartbeatRespBody {
  string id = 1;
}

message SessionExpiredEventBody {
  enum Reason {
    EXPIRED = 0;
    REVOKED = 1;
    OTHER = 99;
  }
  Reason reason = 1;
}

message ChatBroadcastEventBody {
  string id = 1;
  bytes payload = 2;
  string senderId = 3;
  uint64 timestamp = 4;
}

message ChatBroadcastAckBody {
  enum Type {
    ACK = 0;
    NACK = 1;
  }
  Type type = 1;
}
